--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
 
     lintOptions {
         disable 'InvalidPackage'
@@ -34,10 +34,16 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "sharan.flutter_ocr"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+        ndkVersion "25.1.8937393"
+        ndk {
+            debugSymbolLevel 'FULL'
+        }
+
     }
 
     buildTypes {
@@ -52,3 +58,9 @@ android {
 flutter {
     source '../..'
 }
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+}
+android.buildTypes.release.ndk.debugSymbolLevel = 'FULL'
